force-app/main/default/objects/Vehicle_Inventory__c/Vehicle_Inventory__c.object-meta.xml
<CustomObject>
    <description>This object is responsible to keep vehicle inventory.</description>
    <label>Vehicle Inventory</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>