force-app/main/default/objects/Vehicle_Inventory__c/fields/Daily_Rental_Price__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rental_Price__c</fullName>
    <label>Daily Rental Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>