force-app/main/default/objects/Vehicle_Inventory__c/fields/Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Type__c</fullName>
    <label>Transmission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>